package iut.info2.tp6.exo1

enum class CategorieEntreprise {
    SA,
    EURL,
    SARL,
    SCP
}