package iut.info2.tp6.exo1

class PersonneException(msg: String) : Exception(msg)